# set(CMAKE_CXX_FLAGS "-Wall -Werror")

add_executable(CodeTop001 CodeTop001.cc)
add_executable(CodeTop002 CodeTop002.cc)
add_executable(CodeTop003 CodeTop003.cc)
add_executable(CodeTop004 CodeTop004.cc)
add_executable(CodeTop005 CodeTop005.cc)
add_executable(CodeTop006 CodeTop006.cc)
add_executable(CodeTop007 CodeTop007.cc)
add_executable(CodeTop008 CodeTop008.cc)
add_executable(CodeTop009 CodeTop009.cc)
add_executable(CodeTop010 CodeTop010.cc)
add_executable(CodeTop011 CodeTop011.cc)
add_executable(CodeTop012 CodeTop012.cc)
