# set(CMAKE_CXX_FLAGS "-Wall -Werror")

add_executable(CodeTop001 CodeTop001.cc)
add_executable(CodeTop002 CodeTop002.cc)
add_executable(CodeTop003 CodeTop003.cc)
add_executable(CodeTop004 CodeTop004.cc)
add_executable(CodeTop005 CodeTop005.cc)
add_executable(CodeTop006 CodeTop006.cc)
add_executable(CodeTop007 CodeTop007.cc)
add_executable(CodeTop008 CodeTop008.cc)
add_executable(CodeTop009 CodeTop009.cc)
add_executable(CodeTop010 CodeTop010.cc)
add_executable(CodeTop011 CodeTop011.cc)
add_executable(CodeTop012 CodeTop012.cc)
add_executable(CodeTop013 CodeTop013.cc)
add_executable(CodeTop014 CodeTop014.cc)
add_executable(CodeTop015 CodeTop015.cc)
add_executable(CodeTop016 CodeTop016.cc)
add_executable(CodeTop017 CodeTop017.cc)
add_executable(CodeTop018 CodeTop018.cc)
add_executable(CodeTop019 CodeTop019.cc)
add_executable(CodeTop020 CodeTop020.cc)
add_executable(CodeTop021 CodeTop021.cc)
add_executable(CodeTop022 CodeTop022.cc)
add_executable(CodeTop023 CodeTop023.cc)

