# set(CMAKE_CXX_FLAGS "-Wall -Werror")

add_executable(CodeTop001 CodeTop001.cc)
add_executable(CodeTop002 CodeTop002.cc)
add_executable(CodeTop003 CodeTop003.cc)
add_executable(CodeTop004 CodeTop004.cc)
add_executable(CodeTop005 CodeTop005.cc)
add_executable(CodeTop006 CodeTop006.cc)
add_executable(CodeTop007 CodeTop007.cc)
add_executable(CodeTop008 CodeTop008.cc)
add_executable(CodeTop009 CodeTop009.cc)
add_executable(CodeTop010 CodeTop010.cc)
add_executable(CodeTop011 CodeTop011.cc)
add_executable(CodeTop012 CodeTop012.cc)
add_executable(CodeTop013 CodeTop013.cc)
add_executable(CodeTop014 CodeTop014.cc)
add_executable(CodeTop015 CodeTop015.cc)
add_executable(CodeTop016 CodeTop016.cc)
add_executable(CodeTop017 CodeTop017.cc)
add_executable(CodeTop018 CodeTop018.cc)
add_executable(CodeTop019 CodeTop019.cc)
add_executable(CodeTop020 CodeTop020.cc)
add_executable(CodeTop021 CodeTop021.cc)
add_executable(CodeTop022 CodeTop022.cc)
add_executable(CodeTop023 CodeTop023.cc)
add_executable(CodeTop024 CodeTop024.cc)
add_executable(CodeTop025 CodeTop025.cc)
add_executable(CodeTop026 CodeTop026.cc)
add_executable(CodeTop027 CodeTop027.cc)
add_executable(CodeTop028 CodeTop028.cc)
add_executable(CodeTop029 CodeTop029.cc)
add_executable(CodeTop030 CodeTop030.cc)
add_executable(CodeTop031 CodeTop031.cc)
add_executable(CodeTop032 CodeTop032.cc)
add_executable(CodeTop033 CodeTop033.cc)
add_executable(CodeTop034 CodeTop034.cc)
add_executable(CodeTop035 CodeTop035.cc)
add_executable(CodeTop036 CodeTop036.cc)
add_executable(CodeTop037 CodeTop037.cc)
add_executable(CodeTop038 CodeTop038.cc)
add_executable(CodeTop039 CodeTop039.cc)
add_executable(CodeTop040 CodeTop040.cc)
add_executable(CodeTop041 CodeTop041.cc)
add_executable(CodeTop042 CodeTop042.cc)
add_executable(CodeTop043 CodeTop043.cc)
add_executable(CodeTop044 CodeTop044.cc)
add_executable(CodeTop045 CodeTop045.cc)
add_executable(CodeTop046 CodeTop046.cc)
add_executable(CodeTop047 CodeTop047.cc)
add_executable(CodeTop048 CodeTop048.cc)
add_executable(CodeTop049 CodeTop049.cc)
add_executable(CodeTop050 CodeTop050.cc)
add_executable(CodeTop051 CodeTop051.cc)
add_executable(CodeTop052 CodeTop052.cc)
add_executable(CodeTop053 CodeTop053.cc)

