set(CMAKE_CXX_FLAGS "-Wall -Werror")

add_executable(JZ03 JZ03.cc)
add_executable(JZ04 JZ04.cc)
add_executable(JZ05 JZ05.cc)
add_executable(JZ06 JZ06.cc)
add_executable(JZ07 JZ07.cc)
add_executable(JZ09 JZ09.cc)
add_executable(JZ10 JZ10.cc)
add_executable(JZ10_II JZ10_II.cc)
add_executable(JZ11 JZ11.cc)
add_executable(JZ12 JZ12.cc)
add_executable(JZ13 JZ13.cc)
add_executable(JZ14 JZ14.cc)
add_executable(JZ14_2 JZ14_2.cc)
add_executable(JZ15 JZ15.cc)
add_executable(JZ16 JZ16.cc)
add_executable(JZ17 JZ17.cc)
# add_executable(JZ19 JZ19.cc)
# add_executable(JZ20 JZ20.cc)
add_executable(JZ21 JZ21.cc)
add_executable(JZ29 JZ29.cc)
add_executable(JZ30 JZ30.cc)
add_executable(JZ31 JZ31.cc)
add_executable(JZ33 JZ33.cc)
# add_executable(JZ38 JZ38.cc)
add_executable(JZ39 JZ39.cc)
add_executable(JZ40 JZ40.cc)
add_executable(JZ42 JZ42.cc)
# add_executable(JZ43 JZ43.cc)
# add_executable(JZ44 JZ44.cc)
# add_executable(JZ45 JZ45.cc)
add_executable(JZ46 JZ46.cc)
add_executable(JZ47 JZ47.cc)
add_executable(JZ48 JZ48.cc)
add_executable(JZ49 JZ49.cc)
add_executable(JZ50 JZ50.cc)
# add_executable(JZ51 JZ51.cc)
add_executable(JZ53 JZ53.cc)
add_executable(JZ53_2 JZ53_2.cc)
# add_executable(JZ56 JZ56.cc)
add_executable(JZ56_2 JZ56_2.cc)
add_executable(JZ57 JZ57.cc)
add_executable(JZ57_2 JZ57_2.cc)
add_executable(JZ58 JZ58.cc)
add_executable(JZ58_2 JZ58_2.cc)
# add_executable(JZ59 JZ59.cc)
# add_executable(JZ60 JZ60.cc)
add_executable(JZ61 JZ61.cc)
# add_executable(JZ62 JZ62.cc)
add_executable(JZ63 JZ63.cc)
# add_executable(JZ64 JZ64.cc)
# add_executable(JZ65 JZ65.cc)
add_executable(JZ59_2 JZ59_2.cc)
add_executable(JZ66 JZ66.cc)
add_executable(JZ67 JZ67.cc)

