add_executable(LQ01 LQ01.cc)
add_executable(LQ02 LQ02.cc)
add_executable(LQ03 LQ03.cc)
add_executable(LQ04 LQ04.cc)
add_executable(LQ05 LQ05.cc)
add_executable(LQ10 LQ10.cc)
add_executable(LQ11 LQ11.cc)
add_executable(LQ16 LQ16.cc)
add_executable(LQ17 LQ17.cc)
add_executable(LQ18 LQ18.cc)
add_executable(LQ20 LQ20.cc)
add_executable(LQ22 LQ22.cc)
add_executable(LQ24 LQ24.cc)
add_executable(LQ25 LQ25.cc)
add_executable(LQ26 LQ26.cc)
add_executable(LQ27 LQ27.cc)
add_executable(LQ31 LQ31.cc)
add_executable(LQ33 LQ33.cc)
add_executable(LQ34 LQ34.cc)
add_executable(LQ42 LQ42.cc)
add_executable(LQ53 LQ53.cc)
add_executable(LQ56 LQ56.cc)
add_executable(LQ70 LQ70.cc)
add_executable(LQ76 LQ76.cc)
add_executable(LQ77 LQ77.cc)
add_executable(LQ78 LQ78.cc)
add_executable(LQ82 LQ82.cc)
add_executable(LQ92 LQ92.cc)
add_executable(LQ96 LQ96.cc)
add_executable(LQ131 LQ131.cc)
add_executable(LQ152 LQ152.cc)
add_executable(LQ153 LQ153.cc)
add_executable(LQ162 LQ162.cc)
add_executable(LQ167 LQ167.cc)
add_executable(LQ198 LQ198.cc)
add_executable(LQ200 LQ200.cc)
add_executable(LQ206 LQ206.cc)
add_executable(LQ209 LQ209.cc)
add_executable(LQ213 LQ213.cc)
add_executable(LQ216 LQ216.cc)
add_executable(LQ224 LQ224.cc)
add_executable(LQ240 LQ240.cc)
add_executable(LQ252 LQ252.cc)
add_executable(LQ253 LQ253.cc)
add_executable(LQ261 LQ261.cc)
add_executable(LQ283 LQ283.cc)
add_executable(LQ300 LQ300.cc)
add_executable(LQ322 LQ322.cc)
add_executable(LQ394 LQ394.cc)
add_executable(LQ448 LQ448.cc)
add_executable(LQ416 LQ416.cc)
add_executable(LQ461 LQ461.cc)
add_executable(LQ491 LQ491.cc)
add_executable(LQ496 LQ496.cc)
add_executable(LQ567 LQ567.cc)
add_executable(LQ611 LQ611.cc)
add_executable(LQ695 LQ695.cc)
add_executable(LQ704 LQ704.cc)
add_executable(LQ713 LQ713.cc)
add_executable(LQ739 LQ739.cc)
add_executable(LQ784 LQ784.cc)
add_executable(LQ797 LQ797.cc)
add_executable(LQ876 LQ876.cc)
add_executable(LQ977 LQ977.cc)
add_executable(LQ1254 LQ1254.cc)
add_executable(LQ2397 LQ2397.cc)